# FL_CMAPPS

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: centralized.yaml  federated.yaml  local.yaml  log_schema.yaml  preprocessing.yaml  sensors.yaml  tcn_spec.yaml  training_defaults.yaml
docs/: phase6a_decision.md  phase6a_results.json  phase6b_decision.md  phase6b_results.json  sanity_test_analysis.md
docs/phase6a_plots/: summary_table.md
experiments/20260117_150716_75af265d/: config.json
experiments/demo_fedavg_20260117_230008_2d162bee/: config.json
experiments/demo_fedavg_20260117_231345_3c66d876/: config.json
experiments/demo_fedavg_20260117_231415_8a11f245/: config.json
experiments/demo_fedavg_20260117_231423_5a820de0/: config.json
experiments/fedavg_FD001_20260117_191508_57c7d15c/: config.json  final_model.pt
experiments/repro_test_20260117_234359_6944d3d9/: config.json
experiments/repro_test_20260117_234513_03240dc5/: config.json
experiments/repro_test_20260117_234618_35066a24/: config.json
experiments/repro_test_20260117_234713_8026623a/: config.json
notebooks/: analysis_demo.ipynb
notebooks/.ipynb_checkpoints/: analysis_demo-checkpoint.ipynb
scripts/: check_env_and_data.py  create_example_log.py  plot_phase6a.py  run_federated.py  run_local.py  run_phase6a_validation.py  run_phase6b_validation.py  test_reproducibility.py  train_centralized.py
src/: client.py  runner.py  server.py
src/models/: tcn.py  (+1 more)
tests/: test_algorithms.py  test_data_pipeline.py  test_fl_framework.py  test_sanity_fedavg.py
(+186 files in other folders)
